--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@feathersjs/transport-commons": "^4.5.9",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "feathers-hooks-common": "^5.0.4",
     "feathers-sequelize": "^6.2.0",
     "helmet": "^3.23.3",
     "pg": "^8.4.1",
