--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "feathers-hooks-common": "^5.0.4",
     "feathers-sequelize": "^6.2.0",
     "helmet": "^3.23.3",
+    "moment": "^2.29.1",
     "pg": "^8.4.1",
     "sequelize": "^6.3.0",
     "serve-favicon": "^2.5.0",
@@ -65,6 +66,7 @@
     "@types/helmet": "^4.0.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mocha": "^8.0.3",
+    "@types/moment": "^2.13.0",
     "@types/serve-favicon": "^2.5.1",
     "@types/validator": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
